--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "at-ui": "^1.3.3",
+    "at-ui-style": "^1.5.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "iview": "^3.5.4",
     "vue": "^2.6.11",
     "vuex": "^3.3.0"
   },
