--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "at-ui-style": "^1.5.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "glob": "^7.1.6",
     "vue": "^2.6.11",
     "vuex": "^3.3.0"
   },
