--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "glob": "^7.1.6",
+    "mavon-editor": "^2.9.0",
     "vue": "^2.6.11",
     "vuex": "^3.3.0"
   },
